# veeam_test_task

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/common/: exception_ptr_wrapper.cpp  exception_ptr_wrapper.h  hash-functions.cpp  hash-functions.h  type-defs.h
src/file-chunks-producer/: async-file-chunks-producer.cpp  async-file-chunks-producer.h  chunk.cpp  chunk.h  chunks-memory-pool.cpp  chunks-memory-pool.h  dumb-lock-free-file-chunks-producer.cpp  dumb-lock-free-file-chunks-producer.h  file-chunks-producer-iface.h  simple-file-chunks-producer.cpp  simple-file-chunks-producer.h
src/file-hash-calculator/: file-hash-calculator.cpp  file-hash-calculator.h
src/file-hash-consumer/: file-hash-consumer-iface.h  file-hash-consumer.cpp  file-hash-consumer.h  hash.cpp  hash.h  one-write-file-hash-consumer.cpp  one-write-file-hash-consumer.h
src/file-reader/: binary-file-reader.cpp  binary-file-reader.h  file-reader-iface.h
src/file-writer/: file-writer-iface.h  text-file-writer.cpp  text-file-writer.h
tests/: CMakeLists.txt  file-chunks-producer-tests.cpp  hash-file-writer-tests.cpp  simple-file-chunks-producer-tests.cpp
tests/stubs/: file-reader-stub.cpp  file-reader-stub.h  file-writer-stub.cpp  file-writer-stub.h
tests/utils/: utils.cpp  utils.h
